# mcp-auth

./: .gitignore  DEPLOYMENT.md  GETTING_STARTED.md  LICENSE  PROJECT_SUMMARY.md  README.md  test-auth-page.sh  test-client-interactive.sh  test-client-oauth-flow.sh  test-oauth-flow.sh
example/Adobe_Premiere_Pro_MCP/: .env.example  package-lock.json  package.json
example/Adobe_Premiere_Pro_MCP/src/: index.ts
example/Adobe_Premiere_Pro_MCP/src/auth/: oauth-validator.ts
sdk/python/: MANIFEST.in  README.md  pyproject.toml  setup.py
sdk/python/auth_agent_mcp/: __init__.py  client.py  middleware.py
sdk/typescript/: README.md  package-lock.json  package.json
sdk/typescript/src/: client.ts  index.ts  middleware.ts  types.ts
supabase/: fix-auth-codes-agent-id.sql  fix-auth-codes-user-email.sql  migration-add-mcp.sql  schema.sql
workers/: package-lock.json  package.json  tsconfig.json  wrangler.toml
workers/src/: index.ts
workers/src/lib/: crypto.ts  db.ts  validation.ts
workers/src/routes/: discovery.ts  introspection.ts  oauth.ts  servers.ts
workers/src/templates/: consent.ts
workers/src/types/: index.ts
