[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auth-agent-mcp"
version = "1.0.0"
description = "OAuth 2.1 middleware for MCP servers using Auth-Agent"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Auth-Agent Team", email = "hetkp8044@gmail.com"}
]
keywords = ["oauth", "mcp", "authorization", "fastapi", "middleware"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: FastAPI",
]
dependencies = [
    "httpx>=0.24.0",
    "fastapi>=0.100.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.0.270",
]

[project.urls]
Homepage = "https://github.com/auth-agent/auth-agent-mcp"
Documentation = "https://docs.auth-agent.com/mcp"
Repository = "https://github.com/auth-agent/auth-agent-mcp"
"Bug Tracker" = "https://github.com/auth-agent/auth-agent-mcp/issues"

[tool.setuptools]
packages = ["auth_agent_mcp"]

[tool.setuptools.package-data]
auth_agent_mcp = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
